# hash-guard

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: tauri-build.yml
public/: style.css
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hash.rs  main.rs
src/component/: hashbox.tsx  lang-switcher.tsx  theme-switcher.tsx
src/hooks/: useTheme.ts  useTranslation.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  fa.json
